# LLM_FinancialAnalysis

./: .env  .env_example  .gitignore  C_process.py  D_fetcher.py  D_upload_data.py  Example_Usasage.ipynb  F_fetcher.py  F_upload_data.py  README.md  call copy.py  call.py  call_fireworks.py  call_gemini.py  call_groq.py  call_hf.py  call_pred.py  cia.xlsx  companies.csv  dataloader.py  fetcher.py  handler.py  implemnt.ipynb  new_call.py  process.py  pyproject.toml  ref.csv  requirements.txt  tests.ipynb  upload_data.py  upload_predictions.py  utils.py
.ipynb_checkpoints/: tester-checkpoint.ipynb
unified_cvm_data/: dfp_cia_aberta_2023.csv
