[tool.poetry]
name = "cvm-db-poetry"
version = "0.1.0"
description = ""
authors = ["PedroDnT <pedrotodescan@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
pandas = "^2.2.2"
ipykernel = "^6.29.4"
chardet = "^5.2.0"
jupyter = "^1.0.0"
supabase = "^2.5.1"
tqdm = "^4.66.4"
python-dotenv = "^1.0.1"
psycopg2 = "^2.9.9"
psycopg2-binary = "^2.9.9"
bs4 = "^0.0.2"
sqlalchemy = "^2.0.31"
pymongo = "^4.8.0"
python = ">=3.10,<4.0"
scikit-learn = "^1.5.1"
numpy = "^1.26.0"
unicode = "^2.9"
unidecode = "^1.3.8"
ipython = "^8.26.0"
langchain = "^0.2.7"
langchain-community = "^0.2.7"
openai = "^1.35.13"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
